# auto-spammer

./: .gitignore  .prettierrc  Auto Spammer.excalidraw  README.MD  README.md  buid.py  build.py  bun.lockb  get_peak_mem.ps1  make.py  package.json  pnpm-lock.yaml
io_handler/: build.bat  build.sh  flags.py  main.go  main.py  main.rs  make.py  tracefile.json  watcher.sh
io_handler/final/: io.go  libio.h  main.rs
io_handler/go version/: build.py  go.mod  go.sum  main  main.go
io_handler/go version/_obj/: _cgo_export.h  _cgo_gotypes.go  main.cgo1.go
io_handler/go version/test_ffi/: hello.go  libhello.h  main.rs
io_handler/go version/test_ffi/_obj/: _cgo_export.h  _cgo_gotypes.go  hello.cgo1.go
io_handler_zig/: build.zig  main.rs
src/: App.css  App.tsx  styles.css
src-frontend/: astro.config.mjs  bun.lockb  package.json  pnpm-lock.yaml  tsconfig.json
src-frontend/src/assets/: SettingsIcon.svelte
src-frontend/src/components/: ColorPickerNode.svelte  Flow.svelte  GraphContainer.astro  GraphContainer.svelte  KeyBindNode.svelte  TypeNode.svelte  nodes-and-edges.ts  style.css  test.css  teste.svelte
src-frontend/src/components/BaseNode/: BaseNode.svelte  Edge.svelte  style.css
src-frontend/src/layouts/: BaseLayout.astro  Layout.astro
src-frontend/src/pages/: index.astro
src-tauri/: Cargo.toml  build.rs  capabilities.json  tauri.conf.json
src-tauri/capabilities/: capabilities.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/io_handler/: go.mod  go.sum  io.go
src/components/DynamicSelect/: DynamicSelect.tsx
(+2 files in other folders)
